--- a/Views/Contrato/Index.cshtml
+++ b/Views/Contrato/Index.cshtml
@@ -68,6 +68,7 @@
                         <a class="btn btn-danger" asp-action="Eliminar" asp-route-id="@item.IdContrato" title="Eliminar"><i class="fas fa-trash-alt"></i></a>
                     }
                     <a class="btn btn-info" asp-action="Detalles" asp-route-id="@item.IdContrato" title="Detalles"><i class="fas fa-book"></i></a>
+                    <a class="btn btn-success" asp-controller="Pago" asp-action="Pagos" title="Pagos"><i class="fas fa-money-bill"></i></a>
                 </div>
             </td>
         </tr>
